<resources>
    <string name="ellipsis" translatable="false">&#8230;</string>
    <string name="alpha_jump_placeholder_text" translatable="false">A</string>
    <string name="speed_bump_lockout_message">Focus on the road</string>
    <string name="scroll_bar_page_up_button">Scroll up</string>
    <string name="scroll_bar_page_down_button">Scroll down</string>
<string name="test">sdfd</string>
<string name="bottom_sheet_behavior" translatable="false">com.google.android.material.bottomsheet.ViewPager2AwareBottomSheetBehavior</string>
<string name="app_name" translatable="false">Pocket Casts</string>
    <string name="pocket_casts" translatable="false">@string/app_name</string>
    <string name="pocket_casts_plus" translatable="false">Pocket Casts Plus</string>
    <string name="pocket_casts_plus_short" translatable="false">Plus</string>
    <string name="pocket_casts_patron" translatable="false">Pocket Casts Patron</string>
    <string name="pocket_casts_patron_short" translatable="false">Patron</string>
    <string name="empty" translatable="false" />
    <string name="single_space" translatable="false"> </string>
    <string name="account">Account</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="add_bookmark_title">Add Bookmark</string>
    <string name="bookmark_added">Bookmark \"%s\" added</string>
    <string name="bookmark_updated">Bookmark \"%s\" updated</string>
    <string name="change_title">Change title</string>
    <string name="add_bookmark_title_hint">Add an optional title to identify this bookmark</string>
    <string name="change_bookmark_title_hint">Change the title that identifies this bookmark</string>
    <string name="save_bookmark">Save bookmark</string>
    <string name="playing_bookmark">Playing \"%s\"</string>
    <string name="skipping_to">Skipping to %s</string>
    <string name="add_to_up_next">Add to Up Next</string>
    <string name="add_to_up_next_question">Add to up next?</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="archive_episode">Archive episode</string>
    <string name="archived">Archived</string>
    <string name="auto_archive">Auto archive</string>
    <string name="auto_download">Auto download</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_download">Cancel download</string>
    <string name="chapters">Chapters</string>
    <string name="close">Close</string>
    <string name="create_account">Create account</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="download">Download</string>
    <string name="downloads">Downloads</string>
    <string name="edit">Edit</string>
    <string name="error_no_network">No network connection detected. Please try again later.</string>
    <string name="effects">Effects</string>
    <string name="episode_not_found">Episode not found</string>
    <string name="go_to_podcast">Go to podcast</string>
    <string name="go_to_files">Go to files</string>
    <string name="in_progress">In progress</string>
    <string name="log_in">Log in</string>
    <string name="log_in_subtitle">Start listening to your favorite podcasts</string>
    <string name="log_out">Log out</string>
    <string name="log_in_watch_requires_plus">Log in with a Plus account to use this app or upgrade visiting</string>
    <string name="log_in_with_plus">Please log in with a Plus account</string>
    <string name="log_in_free_acccount">%s is using a free account</string>
    <string name="mark_as_played">Mark as played</string>
    <string name="mark_as_unplayed">Mark as unplayed</string>
    <string name="mark_played">Mark played</string>
    <string name="mark_unplayed">Mark unplayed</string>
    <string name="more">More</string>
    <string name="more_options">More options</string>
    <string name="next_episode">Next episode</string>
    <string name="notifications_blocked_warning">Notifications are blocked. You can update permission through Settings.</string>
    <string name="notifications_blocked_warning_snackbar_action" translatable="false">@string/update</string>
    <string name="ok">OK</string>
    <string name="options">Options</string>
    <string name="pause">Pause</string>
    <string name="pause_episode">Pause episode</string>
    <string name="play">Play</string>
    <string name="playback">Playback</string>
    <string name="play_all">Play all</string>
    <string name="play_all_from_here">Play all from here</string>
    <string name="play_episode">Play episode</string>
    <string name="play_last">Play last</string>
    <string name="play_next">Play next</string>
    <string name="playback_speed">Playback speed</string>
    <string name="play_now">Play now</string>
    <string name="play_on">Play on&#8230;</string>
    <string name="played">Played</string>
    <string name="podcast_and_episode">Podcast &amp; Episode</string>
    <string name="remove_from_up_next">Remove from Up Next</string>
    <string name="renew_your_subscription">Renew your Subscription</string>
    <string name="removed">Removed</string>
    <string name="search">Search</string>
    <string name="search_episodes_not_found_title">No episodes found</string>
    <string name="search_episodes_not_found_summary">We couldn\'t find any episode for that search. Try another keyword.</string>
    <string name="selected">Selected</string>
    <string name="sort_newest_to_oldest">Newest to oldest</string>
    <string name="sort_oldest_to_newest">Oldest to newest</string>
    <string name="not_selected">Not selected</string>
    <string name="select_all">Select all</string>
    <string name="select_none">Select none</string>
    <string name="select_all_above">Select all above</string>
    <string name="stop">Stop</string>
    <string name="deselect_all_above">Deselect all above</string>
    <string name="deselect_all">Deselect all</string>
    <string name="deselect_all_below">Deselect all below</string>
    <string name="select_all_below">Select all below</string>
    <string name="share_podcast">Share podcast</string>
    <string name="show_archived">Show archived</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="skip_back">Skip back</string>
    <string name="skip_forward">Skip forward</string>
    <string name="slumber_studios" translatable="false">Slumber&#160;Studios</string>
    <string name="sort_by">Sort by</string>
    <string name="star">Star</string>
    <string name="star_episode">Star episode</string>
    <string name="try_again">Try again</string>
    <string name="token_refresh_sign_in_error_title">Sign In Error</string>
    <string name="token_refresh_sign_in_error_description">There was a problem and you\'ve been signed out. Tap here to sign back in.</string>
    <string name="transcript">Transcript</string>
    <string name="unstar">Unstar</string>
    <string name="unstar_episode">Unstar episode</string>
    <string name="starred">Starred</string>
    <string name="stop_downloading">Stop downloading</string>
    <string name="stream">Stream</string>
    <string name="subscribe">Follow</string>
    <string name="subscribe_to">Subscribe to %s</string>
    <string name="upgrade_to">Upgrade to %s</string>
    <string name="unarchive_all">Unarchive all</string>
    <string name="get_pocket_casts_plus">Get Pocket Casts Plus</string>
    <string name="unplayed">Unplayed</string>
    <string name="unsubscribe">Unfollow</string>
    <string name="up_next">Up Next</string>
    <string name="learn_more">Learn more.</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait just a moment</string>
    <string name="error">Error</string>
    <string name="error_generic_message">Something went wrong. Please try again later.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="back">Back</string>
    <string name="retry">Retry</string>
    <string name="queue_for_later">Queue for later</string>
    <string name="youre_not_on_wifi">You\'re not on WiFi</string>
    <string name="youre_on_metered_wifi">You\'re on metered WiFi</string>
    <string name="delete_download">Delete download</string>
    <string name="chromecast">Chromecast</string>
    <string name="rearrange_actions">Rearrange Actions</string>
    <string name="all">All</string>
    <string name="downloaded">Downloaded</string>
    <string name="not_downloaded">Not Downloaded</string>
    <string name="navigation_continue">Continue</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="color">Color</string>
    <string name="preview">Preview</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="share">Share</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="expanded">Expanded</string>
    <string name="collapsed">Collapsed</string>
    <string name="details">Details</string>
    <string name="episode">Episode</string>
    <string name="episodes">Episodes</string>
    <string name="none">None</string>
    <string name="expand_details">Expand details</string>
    <string name="add_podcasts">Add podcasts</string>
    <string name="please_try_again">Please try again</string>
    <string name="next">Next</string>
    <string name="select_podcasts">Select podcasts</string>
    <string name="clip_title">Clip</string>
    <string name="support">Support</string>
    <string name="go_to_top">Go to top</string>
    <string name="go_to_bottom">Go to bottom</string>
    <string name="go_to_previous">Go to previous</string>
    <string name="go_to_next">Go to next</string>
    <string name="got_it">Got it</string>
    <string name="submit">Submit</string>
    <string name="report">Report</string>
    <string name="report_subtitle">Report inappropriate content</string>
    <string name="widget">Widget</string>
    <string name="medium_player_classic_widget_label">Medium Player (Classic)</string>
    <string name="small_player_widget_label">Small Player</string>
    <string name="medium_player_widget_label">Medium Player</string>
    <string name="large_player_widget_label">Large Player</string>
    <string name="widget_no_episode_playing">No episode playing</string>
    <string name="widget_nothing_in_up_next">Nothing in Up Next</string>
    <string name="widget_check_out_discover">Check out Discover for more</string>
    <string name="widget_preview_episode_title">Episode title</string>
    <string name="widget_preview_episode_in_up_next_title">Episode in Up Next</string>
    <string name="widget_preview_time_left_1">25m left</string>
    <string name="widget_preview_time_left_2">12m left</string>
    <string name="widget_preview_time_left_3">55m left</string>
    <string name="widget_preview_time_left_4">1h 36m left</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="multiselect_actions_shown">Shortcut in toolbar</string>
    <string name="multiselect_actions_hidden">In overflow</string>
    <string name="episodes_singular">1 episode</string>
    <string name="profile_create_newsletter_summary">Receive news, app updates, themed podcast lists, interviews, and more</string>
    <string name="profile_create_password_requirements">Password must be at least 6 characters</string>
    <string name="profile_email_address">Email Address</string>
    <string name="profile_next" translatable="false">@string/next</string>
    <string name="profile_password">Password</string>
    <string name="profile_pocket_casts_newsletter">Pocket Casts newsletter</string>
</resources>