<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" xmlns:ns2="http://schemas.android.com/apk/res-auto" android:id="@+id/mainLayout" android:layout_width="match_parent" android:layout_height="match_parent" android:background="?attr/primary_ui_01" android:padding="0dp" tools:context="au.com.shiftyjelly.pocketcasts.account.CreateDoneFragment">

    <ImageView android:id="@+id/imgClose" android:layout_width="24dp" android:layout_height="24dp" android:layout_marginStart="24dp" android:layout_marginTop="24dp" android:contentDescription="@string/close" android:src="@drawable/ic_close" ns2:tint="?attr/primary_interactive_01" ns2:layout_constraintStart_toStartOf="parent" ns2:layout_constraintTop_toTopOf="parent" />

    <View android:id="@+id/btnClose" android:layout_width="100dp" android:layout_height="100dp" ns2:layout_constraintStart_toStartOf="parent" ns2:layout_constraintTop_toTopOf="parent" />

    <ImageView android:id="@+id/imgDone" android:layout_width="160dp" android:layout_height="160dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginBottom="8dp" android:contentDescription="@string/done" android:scaleType="fitCenter" ns2:srcCompat="@drawable/ic_created_free_account" ns2:layout_constraintBottom_toTopOf="@id/lblNewsletterTitle" ns2:layout_constraintEnd_toEndOf="parent" ns2:layout_constraintStart_toStartOf="parent" ns2:layout_constraintTop_toTopOf="parent" />

    <TextView android:id="@+id/txtTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:layout_marginTop="24dp" android:layout_marginEnd="16dp" android:textAppearance="@style/H20" android:textColor="?attr/primary_text_01" ns2:layout_constraintEnd_toEndOf="parent" ns2:layout_constraintStart_toStartOf="parent" ns2:layout_constraintTop_toBottomOf="@+id/imgDone" tools:text="Title" />

    <TextView android:id="@+id/txtDetail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="8dp" android:layout_marginTop="8dp" android:layout_marginEnd="8dp" android:textAppearance="@style/H40" android:textColor="?attr/primary_text_02" ns2:layout_constraintEnd_toEndOf="parent" ns2:layout_constraintStart_toStartOf="parent" ns2:layout_constraintTop_toBottomOf="@id/txtTitle" tools:text="Detail" />

    <ProgressBar android:id="@+id/progress" style="@style/Widget.AppCompat.ProgressBar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8dp" android:indeterminateTint="?attr/primary_interactive_01" ns2:layout_constraintBottom_toTopOf="@id/lblNewsletterTitle" ns2:layout_constraintEnd_toEndOf="parent" ns2:layout_constraintStart_toStartOf="parent" ns2:layout_constraintTop_toTopOf="parent" />

    <ImageView android:id="@+id/imgNewsletter" android:layout_width="24dp" android:layout_height="24dp" android:layout_marginStart="24dp" android:contentDescription="@string/profile_pocket_casts_newsletter" android:src="@drawable/ic_newsletter" ns2:tint="?attr/primary_interactive_01" android:layout_marginTop="8dp" ns2:layout_constraintStart_toStartOf="parent" ns2:layout_constraintTop_toTopOf="@id/lblNewsletterTitle" />

    <View android:id="@+id/btnNewsletter" android:layout_width="0dp" android:layout_height="0dp" android:paddingTop="16dp" android:paddingBottom="16dp" android:background="?attr/selectableItemBackground" ns2:layout_constraintEnd_toEndOf="parent" ns2:layout_constraintStart_toStartOf="parent" ns2:layout_constraintTop_toTopOf="@+id/lblNewsletterTitle" ns2:layout_constraintBottom_toBottomOf="@+id/lblNewsletterDescription" />

    <TextView android:id="@+id/lblNewsletterTitle" style="@style/H40" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginBottom="6dp" android:paddingTop="8dp" android:text="@string/profile_pocket_casts_newsletter" android:textAppearance="@style/H40" android:textColor="?attr/primary_text_01" ns2:layout_constraintBottom_toTopOf="@id/lblNewsletterDescription" ns2:layout_constraintEnd_toStartOf="@+id/switchNewsletter" ns2:layout_constraintStart_toEndOf="@id/imgNewsletter" />

    <TextView android:id="@+id/lblNewsletterDescription" style="@style/P60" android:layout_width="0dp" android:layout_height="wrap_content" android:paddingBottom="8dp" android:layout_marginBottom="8dp" android:lineSpacingMultiplier="1.1" android:text="@string/profile_create_newsletter_summary" android:textColor="?attr/primary_text_02" ns2:layout_constraintBottom_toTopOf="@+id/btnDone" ns2:layout_constraintEnd_toEndOf="@id/lblNewsletterTitle" ns2:layout_constraintStart_toStartOf="@id/lblNewsletterTitle" />

    <Switch android:id="@+id/switchNewsletter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="24dp" android:textColor="?attr/primary_interactive_01" ns2:layout_constraintBottom_toBottomOf="@id/lblNewsletterDescription" ns2:layout_constraintEnd_toEndOf="parent" ns2:layout_constraintTop_toTopOf="@id/lblNewsletterTitle" />

    <com.google.android.material.button.MaterialButton android:id="@+id/btnDone" style="@style/MaterialButtonStyle" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginBottom="8dp" android:fontFamily="sans-serif-medium" android:letterSpacing="0.02" android:paddingTop="16dp" android:paddingBottom="16dp" android:text="@string/done" android:textAllCaps="false" android:textSize="18sp" ns2:cornerRadius="12dp" ns2:layout_constraintBottom_toBottomOf="parent" ns2:layout_constraintEnd_toEndOf="parent" ns2:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
